# S206-pytest-seminar

./: .gitignore  README.md  pyproject.toml  pytestAPIsucesso.py
.github/workflows/: pipeline.yml
s206_seminar/src/flask_app/: app.py
s206_seminar/src/hospital_app/: doctor.py  patient.py
s206_seminar/src/inventory_app/: inventory.py  main.py
tests/: teste2.py
tests/tests_flask_app/: test_flask_app.py
tests/tests_hospital_app/: test_hospital_app.py
tests/tests_inventory_integration/: test_inventory_integration.py
tests/tests_inventory_unit/: test_inventory_unit.py
tests/tests_movie/: test_movie.py
tests/tests_pokemon/: test_pokemon.py
